--- a/ejerciciosobs/ej5/vector.yaml
+++ b/ejerciciosobs/ej5/vector.yaml
@@ -9,9 +9,9 @@ sources:
 sinks:
   es_cluster:
     inputs:
-      - "demo_logs"       # only take sampled data
+      - "demo_logs"       # cogemos los logs de sources
     type: "elasticsearch"
     endpoints:
       - "http://elasticsearch:9200"
     bulk:
-      index: "vector-%Y-%m-%d" # daily indices
+      index: "vector-%Y-%m-%d" # índices diarios
